	* Fixed bug #12437: Recycler produces some scroll bars + visual cleanup + js fixes
	* Fixed bug #12368: Context menu of page tree does not work anymore
	* Fixed bug #12468: User setup: items without csh are not aligned

2009-11-06  Oliver Hader  <oliver@typo3.org>

	* Raised DBAL version from 0.9.23 to 0.9.24
	* Raised saltedpasswords version from 0.9.1 to 0.9.2

2009-11-05  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #12420: Log deprecated method calls (to be removed in TYPO3 4.5) (thanks to Xavier Perseguers)

2009-11-05  Tobias Liebi <mail_typo3@etobi.de>

	* Cleanup/Bugfix #11838: Hardcoded labels in t3editor

2009-11-05  Francois Suter  <francois@typo3.org>

	* Feature #12215: Scheduler: Added display and information about usage of timezone

2009-11-05  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #12466: PHP-5.3 Warning: strlen() expects parameter 1 to be string, array given
	* Fixed bug #12236: Password-field in "User Settings" is prefilled, which does not make sense (thanks to Steffen Gebert)

2009-11-05  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #12441: IRRE - Cannot add new elements on second level of nesting
	* Follow-up to bugfix #12441: Code cleanup in t3lib_TCEforms_inline
	* Fixed bug #12483: Call to deprecated method t3lib_beUserAuth::trackBeUser()

2009-11-04  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12452: Fatal error in install tool DB-compare with multiplyDbFieldSize > 1

2009-11-04  Francois Suter  <francois@typo3.org>

	* Follow-up to #12381: Scheduler: BLOB database fields may not be NOT NULL (thanks to Tolleiv Nietsch)

2009-11-03  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #11876 and #12342: stripSlashesOnArray creates references where you want copies (in some PHP versions). Affects usage of _GP (e.g. in the Install Tool and some frontend extensions).

2009-11-03  Oliver Hader  <oliver@typo3.org>
