@@ -23,6 +23,7 @@
 
 	* Raised DBAL version from 0.9.23 to 0.9.24
 	* Raised saltedpasswords version from 0.9.1 to 0.9.2
+	* Fixed bug #12488: Remove redundant code from t3lib_matchCondition in favour of using t3lib_matchCondition_frontend
 
 2009-11-05  Martin Kutschker  <masi@typo3.org>
 
